--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,3 +1,4 @@
-//@import "../../../node_modules/simplebar/dist/simplebar";
-@import "simplebar/dist/simplebar.css";
+@import "../../../node_modules/simplebar/dist/simplebar";
+//@import "simplebar/dist/simplebar.css";
 @import "./libs/admin/styles.min";
+
