--- a/app/views/admin/phalanges/index.html.erb
+++ b/app/views/admin/phalanges/index.html.erb
@@ -22,9 +22,9 @@
                                 <table class="table table-bordered  text-center">
                                     <thead class="thead-dark">
                                         <tr>
-                                            <th scope="col">#</th>
+                                            <th scope="col"><%= model_class.human_attribute_name(:order) -%></th>
                                             <th scope="col"><%= model_class.human_attribute_name(:name) -%></th>
-                                            <th scope="col"><%= model_class.human_attribute_name(:description) -%></th>
+                                            <th scope="col"><%= model_class.human_attribute_name(:image) -%></th>
                                             <th scope="col"><%= model_class.human_attribute_name(:status) -%></th>
                                             <th scope="col"><%= model_class.human_attribute_name(:created_at) %></th>
                                             <th scope="col" class="text-center"><%=t '.actions', default: t("helpers.actions") %></th>
