--- a/app/views/admin/phalanges/show.html.erb
+++ b/app/views/admin/phalanges/show.html.erb
@@ -14,7 +14,11 @@
 
                 <div class="row">
                     <div class="mb-3 col-12 text-center profile">
-                        <img src="/assets/profile/user-1.jpg" width="150" height="150" alt="<%= @phalange&.name %>">
+                        <img src="<%= @phalange.image.url.nil? ? '' : @phalange.image.url %>" width="302" height="210" alt="<%= @phalange&.name %>">
+                    </div>
+                    <div class="mb-3 col-2">
+                        <%= model_class.human_attribute_name(:order) -%>: 
+                        <input class="string optional form-control" value="<%= @phalange.order %>" readonly disabled>
                     </div>
                     <div class="mb-3 col-4">
                         <%= model_class.human_attribute_name(:name) -%>: 
