--- a/app/views/layouts/includes/admin/_sidebar.html.erb
+++ b/app/views/layouts/includes/admin/_sidebar.html.erb
@@ -49,27 +49,27 @@
                         <span class="hide-menu">Falanges</span>
                         <% end %>
                     </li>
-
                     <li class="sidebar-item">
-                     <a class="sidebar-link" href="./ui-buttons.html" aria-expanded="false">
-                      <span>
-                       <i class="fa-solid fa-book-open-reader"></i>
-                   </span>
-                   <span class="hide-menu">Cantos</span>
-               </a>
-           </li>
-           <li class="sidebar-item">
-            <%= link_to admin_libraries_path , class: "sidebar-link #{controller_name == 'libraries' ? 'active' : ''}" do %>
-            <span>
-               <i class="fa-solid fa-book"></i>
-           </span>
-           <span class="hide-menu">Biblioteca</span>
-           <% end -%>
-       </li>
+                        <%= link_to admin_songs_path, class: "sidebar-link #{controller_name == 'songs' ? 'active' : ''}" do %>
+                        <span>
+                         <i class="fa-solid fa-book-open-reader"></i>
+                     </span>
+                     <span class="hide-menu">Cantos</span>
+                     <% end %>
+                 </li>
 
-   </ul>
-</nav>
-<!-- End Sidebar navigation -->
-</div>
-<!-- End Sidebar scroll-->
+                 <li class="sidebar-item">
+                    <%= link_to admin_libraries_path , class: "sidebar-link #{controller_name == 'libraries' ? 'active' : ''}" do %>
+                    <span>
+                     <i class="fa-solid fa-book"></i>
+                 </span>
+                 <span class="hide-menu">Biblioteca</span>
+                 <% end -%>
+             </li>
+
+         </ul>
+     </nav>
+     <!-- End Sidebar navigation -->
+ </div>
+ <!-- End Sidebar scroll-->
 </aside>
