--- a/app/views/layouts/includes/admin/_sidebar.html.erb
+++ b/app/views/layouts/includes/admin/_sidebar.html.erb
@@ -2,8 +2,8 @@
     	<!-- Sidebar scroll-->
     	<div>
     		<div class="brand-logo d-flex align-items-center justify-content-between">
-    			<a href="./index.html" class="text-nowrap logo-img">
-    				<img src="/assets/logos/dark-logo.svg" width="180" alt="" />
+    			<a href="/" class="text-nowrap logo-img">
+    				<h1>SIME-APP</h1>
     			</a>
     			<div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
                     <i class="fa-regular fa-circle-xmark fa-2x"></i>
